--- a/src/pages/AboutUs/HeroSection.css
+++ b/src/pages/AboutUs/HeroSection.css
@@ -6,7 +6,6 @@
   padding-bottom: auto;
 }
 
-
 .text-content h2 {
   font-size: 2.8rem;
   font-weight: 400;
@@ -46,16 +45,31 @@
 }
 
 
-
 @media (max-width: 768px) {
   .text-content {
     text-align: center;
-    margin-bottom: 2rem;
+    padding-top: 2rem;        
+    margin-bottom: 1.2rem;   
+    padding-left: 1rem;     
+    padding-right: 1rem;
+  }
+
+  .text-content h2 {
+    font-size: 2rem;
+    padding-left: 0;
+  }
+
+  .text-content p {
+    font-size: 1rem;
+    max-width: 100%;
+    padding-left: 0;
+    margin-bottom: 1rem;      
   }
 
   .about-image {
-    max-height: 300px;
+    max-height: 280px;        
     width: 100%;
     height: auto;
+    margin: 0 auto;            
   }
 }
