--- a/src/pages/Programs/Programs.css
+++ b/src/pages/Programs/Programs.css
@@ -28,8 +28,8 @@
   background: white;
   padding: 1.2rem;
   border-radius: 16px;
-  width: 250px;              
-  height: 120px;            
+  width: 250px;
+  height: 120px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   font-weight: 500;
   font-size: large;
@@ -39,7 +39,6 @@
   justify-content: center;
   text-align: center;
 }
-
 
 .top-left {
   top: 20px;
@@ -66,7 +65,7 @@
 
 .highlight-text-red {
   color: #fa4b77;
-  font-weight: medium;
+  font-weight: 500;
   line-height: 1.4;
 }
 
@@ -92,6 +91,95 @@
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
 }
+
+
+@media (max-width: 767px) {
+  .program-hero-section {
+    flex-direction: column;
+    gap: 4rem;
+    padding: 2rem 0rem;
+  }
+
+  .circle-col {
+    height: 400px;
+    max-width: 100%;
+  }
+
+  .circle-bg {
+    width: 100%;
+    height: 350px;
+    left: 50%;
+    top: -10%;
+    transform: translateX(-50%);
+    border-radius: 0;
+  }
+
+  .floating-card {
+    width: 180px;
+    height: auto;
+    padding: 1rem;
+    font-size: 0.9rem;
+  }
+
+  .top-left {
+    top: 20px;
+    left: 5%;
+  }
+  .top-right {
+    top: 40px;
+    left: 53%;
+  }
+  .bottom-left {
+    bottom: 150px;
+    left: 5%;
+  }
+  .bottom-right {
+    bottom: 140px;
+    left: 53%;
+  }
+
+  .text-col {
+    text-align: center;
+  }
+
+  .hero-title {
+    font-size: 2rem;
+  }
+
+  .hero-subtext {
+    font-size: 1.2rem;
+  }
+}
+
+
+@media (min-width: 1441px) {
+  .circle-bg {
+    left: -30%;
+    top: -45%;
+  }
+
+  .top-left {
+    left: 180px;
+  }
+  .top-right {
+    left: 400px;
+  }
+  .bottom-left {
+    left: 130px;
+  }
+  .bottom-right {
+    left: 400px;
+  }
+
+  .hero-title {
+    font-size: 3rem;
+  }
+
+  .hero-subtext {
+    font-size: 1.7rem;
+  }
+}
+
 
 
 
@@ -236,7 +324,6 @@
   max-width: 1200px;
   margin: auto;
   margin-top: 7.5%;
-  /* margin-bottom: 65px; */
 }
 
 .left-image-group {
@@ -512,23 +599,32 @@
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
+    position: relative;
   }
-
   .hiw-circle-bg {
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
+    right: unset;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
   }
 
   .couple-img {
-    max-height: 300px;
-    left: -10px;
-    top: 10px;
+    position: relative;
+    z-index: 2;
+    max-height: 280px;
+    left: -60px;
+    top: 20px;
   }
 
   .mobile-img {
-    top: 50px;
-    left: 150px;
-    width: 130px;
+    position: absolute;
+    top: 35px;
+    left: 65%;
+    transform: translateX(-50%);
+    width: 140px;
+    z-index: 3;
   }
 
   .right-content {
@@ -595,11 +691,17 @@
     height: 90px;
     font-size: 12px;
   }
-}
-
-img {
-  max-width: 100%;
-  height: auto;
+    .hiw-circle-bg {
+    width: 240px;
+      height: 240px;
+  }
+    .couple-img {
+    max-height: 240px;
+  }
+    .mobile-img {
+    width: 120px;
+    top: 25px;
+  }
 }
 
 .fade-in {
